Experiments on background-image

--- a/Hello_world!.html
+++ b/Hello_world!.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello, World!</title>
-</head>
-<body bgcolor="blue">
+</head>>
+<body  background-image = url("/home/fancy/Projects/Lessons/-HelloWorld-FromWebStorm/4fg85ZWDO3s.jpg") >
 
 <h1>Hello, world!</h1>
 <p>Hello first paragraph!</p>
