--- a/Hello_world!.html
+++ b/Hello_world!.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link href ="MyFirstStyle.css" rel="stylesheet"/>
     <title>Hello, World!</title>
-</head>>
-<body  background-image = url("/home/fancy/Projects/Lessons/-HelloWorld-FromWebStorm/4fg85ZWDO3s.jpg") >
+</head>
+
+<body>
 
 <h1>Hello, world!</h1>
 <p>Hello first paragraph!</p>
